@@ -175,6 +175,7 @@
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.cli=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.compose=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.devcontainer=ALL-UNNAMED
+                        --add-opens wtf.metio.ilo/wtf.metio.ilo.errors=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.model=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.shell=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.test=ALL-UNNAMED
